<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/save_ID"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/save_ID"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/save_PW"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:hint="@string/save_PW"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/save_AGE"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:hint="@string/save_AGE"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="-16dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/save_HEI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="180dp"
        android:hint="@string/save_HEI"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="3dp" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/save_WEI"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="240dp"
        android:hint="@string/save_WEI"
        android:minHeight="50dp"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="0dp" />

    <Button
        android:id="@+id/signup_but2"
        android:layout_width="165dp"
        android:layout_height="55dp"
        android:text="@string/signup_but2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.673" />

    <TextView
        android:id="@+id/gender"
        android:layout_width="58dp"
        android:layout_height="34dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="성별"
        app:autoSizeTextType="uniform"
        app:layout_constraintBottom_toTopOf="@+id/signup_but2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/save_WEI"
        app:layout_constraintVertical_bias="0.456" />

    <RadioGroup
        android:id="@+id/radiogroup_gender"
        android:layout_width="185dp"
        android:layout_height="123dp"
        app:layout_constraintBottom_toTopOf="@+id/signup_but2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/gender"
        app:layout_constraintTop_toBottomOf="@+id/save_WEI">

        <RadioButton
            android:id="@+id/btn_woman"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:text="여자" />

        <RadioButton
            android:id="@+id/btn_man"
            android:layout_width="85dp"
            android:layout_height="60dp"
            android:text="남자" />
    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>